fix: reduce bottom peeking mice visibility

--- a/css/style.css
+++ b/css/style.css
@@ -390,7 +390,7 @@ footer { background: var(--brown); color: var(--cream); padding: 3.5rem 2.5rem 2
 #pR img { transform: translate(-69px, 301px) rotate(-90deg); }
 #pR.show { transform: translateX(68px); }
 
-#pBL, #pBR { bottom: 0; width: 260px; height: 235px; transform: translateY(100%); }
+#pBL, #pBR { bottom: 0; width: 260px; height: 175px; transform: translateY(100%); }
 #pBL img, #pBR img { margin-left: -50px; margin-top: -70px; }
 #pBL.show, #pBR.show { transform: translateY(0); }
 
@@ -603,7 +603,7 @@ footer { background: var(--brown); color: var(--cream); padding: 3.5rem 2.5rem 2
   #pR img { transform: translate(-54px, 234px) rotate(-90deg); }
   #pL.show { transform: translateX(-48px); }
   #pR.show { transform: translateX(48px); }
-  #pBL, #pBR { width: 205px; height: 183px; }
+  #pBL, #pBR { width: 205px; height: 138px; }
   #pBL img, #pBR img { margin-left: -39px; margin-top: -54px; }
   #pBL { left: 4%; }
   #pBR { right: 4%; }
